--- a/Client-side/html/index.html
+++ b/Client-side/html/index.html
@@ -49,13 +49,13 @@
             <div class="form-container"><img src="/WanderWeave/Client-side/public/bookingPic.png" loading="lazy">
                 <div>
                     <form id="bookingForm">
-                        <label>Where To</label><input type="text" id="whereTo" class="input" placeholder="package code">
-                        <label>How many guests</label><input type="number" id="guests" class="input">
-                        <label>Arrivals</label><input type="date" id="arrivals" class="input">
-                        <label>Leaving</label><input type="date" id="leaving" class="input">
-                        <input type="button" id="submitButton" class="btn" value="Book Now">
+                        <label>Where To</label><input type="text" id="whereTo" class="input" placeholder="package code"
+                        required>
+                        <label>How many guests</label><input type="number" id="guests" class="input" required>
+                        <label>Arrivals</label><input type="date" id="arrivals" class="input" required>
+                        <label>Leaving</label><input type="date" id="leaving" class="input" required>
+                        <input type="submit" id="submitButton" class="btn" value="Book Now">
                     </form>
-
                 </div>
             </div>
         </section>
