--- a/Client-side/html/index.html
+++ b/Client-side/html/index.html
@@ -26,8 +26,9 @@
                     <li class="nav_title"><a href="#contacts">Contact</a></li>
                 </ul>
             </nav>
-            <div class="icons" style="margin-right:8rem"><i class="fas fa-search" id="srch"></i><a href="#"
-                    class="fa-solid fa-route" target="_self"></a><i class="fa-solid fa-user" id="user-icon"></i></div>
+            <div class="icons" style="margin-right:8rem"><i class="fas fa-search" id="srch"></i><a
+                    href="../html/booked.html" class="fa-solid fa-route" target="_self"></a><i class="fa-solid fa-user"
+                    id="user-icon"></i></div>
         </header>
         <div id="search-form">
             <div><input type="search" name="" placeholder="Search For Package here..." id="search-box"><label
@@ -50,7 +51,7 @@
                 <div>
                     <form id="bookingForm">
                         <label>Where To</label><input type="text" id="whereTo" class="input" placeholder="package code"
-                        required>
+                            required>
                         <label>How many guests</label><input type="number" id="guests" class="input" required>
                         <label>Arrivals</label><input type="date" id="arrivals" class="input" required>
                         <label>Leaving</label><input type="date" id="leaving" class="input" required>
